src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Building %26 Construction Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Customer Confirmed</fullName>
        </values>
        <values>
            <fullName>No longer required</fullName>
        </values>
        <values>
            <fullName>Stage 3</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Stage 3 Complete</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Design Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No longer required</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Fit Out Design Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Customer Confirmed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No longer required</fullName>
        </values>
        <values>
            <fullName>Stage 1</fullName>
        </values>
        <values>
            <fullName>Stage 1 Complete</fullName>
        </values>
        <values>
            <fullName>Stage 2</fullName>
        </values>
        <values>
            <fullName>Stage 2 Complete</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inventory was removed from a Quote</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ordinary Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Professional Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>More Information Required</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No longer required</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for Someone Else</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Project Works Request Case</fullName>
        <description>Project Works Request Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Brief</fullName>
        </values>
        <values>
            <fullName>Client Approval</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Cost Plan</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Quote Request</fullName>
        </values>
        <values>
            <fullName>Works Instruction</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SLA Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Documents Agreed</fullName>
        </values>
        <values>
            <fullName>Draft Documents Sent</fullName>
        </values>
        <values>
            <fullName>Exchanged</fullName>
        </values>
        <values>
            <fullName>Instructed</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>More Information Required</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No longer required</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Deployment</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Ticket Raised</fullName>
        </values>
        <values>
            <fullName>Waiting for Someone Else</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Serviced Space Onboarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Onboard</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AC_Individual_Controls_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC_Individual_Controls__c</fullName>
        <inlineHelpText>If AC available, would you like individual controls</inlineHelpText>
        <label>AC Individual Controls</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Control_Security_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Control_Security__c</fullName>
        <inlineHelpText>Specific Access Contol / Security Requirements</inlineHelpText>
        <label>Access Control/Security</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Requirements_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Requirements__c</fullName>
        <inlineHelpText>Is there anything not mentioned above that you would like including?</inlineHelpText>
        <label>Additional Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Sign_off_anticipated__c</fullName>
        <formula>LBE_Total_Cost_of_Project__c -  Current_Signed_off_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Sign off anticipated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AirConditioning__c</fullName>
        <inlineHelpText>If Air conditioning is available, would customer likes to be able to control the conditions individually within each room?</inlineHelpText>
        <label>Air Conditioning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No, happy for the controls being shared with the main office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Request_Created__c</fullName>
        <label>Approval Request Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_bring_furniture_with_you_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_bring_furniture_with_you__c</fullName>
        <inlineHelpText>If yes, please tell us what</inlineHelpText>
        <label>Are you bring furniture with you?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BankingLandlordConsentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banking Landlord Consent Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Details_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Contact Details Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_Penalty_Premium__c</fullName>
        <label>Break Penalty Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Briefing_Statement__c</fullName>
        <label>Briefing Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Dilapidations__c</fullName>
        <label>Budget Dilapidations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Storage__c</fullName>
        <label>Business Storage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minimal</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Extensive</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Parkings__c</fullName>
        <label>Car Parking Spaces</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Mobile__c</fullName>
        <formula>Owner:User.MobilePhone</formula>
        <label>Case Owner Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_of_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case of Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Casual_Meet_Areas_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casual_Meet_Areas__c</fullName>
        <label>Casual Meet Areas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseMeetingSpaceExtraLarge__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseMeetingSpaceLarge__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseMeetingSpaceMedium__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseMeetingSpaceSmallArea__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedMeetingSpaceSelectExtraLarge__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Select Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CloseMeetingSpaceExtraLarge__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedMeetingSpaceSelectLarge__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Select Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CloseMeetingSpaceLarge__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedMeetingSpaceSelectMedium__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Select Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CloseMeetingSpaceMedium__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedMeetingSpaceSelectSmallArea__c</fullName>
        <inlineHelpText>Does customer need closed meeting space for formal meetings or sensitive discussion? (tick all that apply)</inlineHelpText>
        <label>Select Closed Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CloseMeetingSpaceSmallArea__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Surrender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Surrender</label>
        <referenceTo>Contract_Surrender__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Budget_Amount__c</fullName>
        <description>Money for Works in Current Budget
            Amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Signed_off_Total__c</fullName>
        <label>Current Signed off Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Budget__c</fullName>
        <inlineHelpText>Budget for these works or an idea what is affordable?</inlineHelpText>
        <label>Customer Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Lease_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Lease Information</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (Customer Lease Information)</relationshipLabel>
        <relationshipName>ProjectWorksRequestCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomersVision__c</fullName>
        <inlineHelpText>A bit more about customers business and what matters to him (culture, vision and values)</inlineHelpText>
        <label>Customers Vision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_sent__c</fullName>
        <label>Date sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Function__c</fullName>
        <label>Delivery Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Services</fullName>
                </value>
                <value>
                    <fullName>Project Consultancy</fullName>
                </value>
                <value>
                    <fullName>Project Services</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
                <value>
                    <fullName>AP Construction</fullName>
                </value>
                <value>
                    <fullName>Major Projects</fullName>
                </value>
                <value>
                    <fullName>Construction Services</fullName>
                </value>
                <value>
                    <fullName>Construction Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit_Total__c</fullName>
        <description>This field is populated from Quote object - &apos;Total Customer Disc. Amount&apos; field</description>
        <formula>Quote__r.SBQQ__TotalCustomerDiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desks_Quantity__c</fullName>
        <inlineHelpText>Please include any expansion plans</inlineHelpText>
        <label>Desks Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Size_mm__c</fullName>
        <inlineHelpText>Please include any expansion plans</inlineHelpText>
        <label>Desks Size (mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Code__c</fullName>
        <label>Expense Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.External_Solicitor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (External Contact)</relationshipLabel>
        <relationshipName>Cases_External_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Solicitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Legal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outsourced Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMR_Conference__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formal Meeting Rooms</inlineHelpText>
        <label>Formal Meeting Rooms: Conference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMR_Extra_Large_10_Persons__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formal Meeting Rooms</inlineHelpText>
        <label>Extra Large (10+ Persons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMR_Large_8_10_Persons__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formal Meeting Rooms</inlineHelpText>
        <label>Large (8-10 Persons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMR_Medium_4_6_Persons__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formal Meeting Rooms</inlineHelpText>
        <label>Medium (4-6 Persons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMR_Small_2_4_Persons__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formal Meeting Rooms</inlineHelpText>
        <label>Small (2-4 Persons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Account_Value__c</fullName>
        <label>Final Account Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Dilapidations__c</fullName>
        <label>Final Dilapidations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FitOutCost__c</fullName>
        <label>Fit out cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FitOutLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fit out link</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Cases (Fit out link)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Design_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fit Out Design Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Future_Plan_Amount__c</fullName>
        <description>Money for Works in Future Plan</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HeadLandlordConsentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Head Landlord Consent Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IO_1_Person_Meeting_Table_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Individual Offices</inlineHelpText>
        <label>1 Person + Meeting Table (qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IO_1_Person_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Individual Offices</inlineHelpText>
        <label>Individual Offices: 1 Person (qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IO_2_Persons_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Individual Offices</inlineHelpText>
        <label>2 Persons (qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IO_4_Persons_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Individual Offices</inlineHelpText>
        <label>4 Persons (qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interim_Dilapidations__c</fullName>
        <label>Interim Dilapidations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Size_Sq_Ft__c</fullName>
        <description>Pulled from Inventory, used for ease of reference and list views</description>
        <formula>Inventory__r.Size_sq_ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from Inventory, used for ease of reference and list views</inlineHelpText>
        <label>Inventory Size Sq Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Workstations__c</fullName>
        <description>Pulled from Inventory, used for ease of reference and list views</description>
        <formula>Inventory__r.Workstations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from Inventory, used for ease of reference and list views</inlineHelpText>
        <label>Inventory Workstations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4) OR (1 AND 2 AND 3)</booleanFilter>
            <filterItems>
                <field>Inventory__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Actual Suite, Proposed Suite</value>
            </filterItems>
            <filterItems>
                <field>Inventory__c.Property__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Works Request Case</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Project Works Request Case</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_the_customer_liable_for_Service_Chrg__c</fullName>
        <description>Is the customer liable for Service Charge Reconciliation?</description>
        <inlineHelpText>Is the customer liable for Service Charge Reconciliation?</inlineHelpText>
        <label>Customer liable for Service Charge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_customer_liable_for_electricity__c</fullName>
        <description>Is the customer liable for electricity costs post completion?</description>
        <inlineHelpText>Is the customer liable for electricity costs post completion?</inlineHelpText>
        <label>Customer liable for electricity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Ticket__c</fullName>
        <label>Jira Ticket</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KF_Make_a_brew_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Kitchen Facilities</inlineHelpText>
        <label>Kitchen Facilities: Make a brew (qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KF_Make_a_sandwich__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Kitchen Facilities</inlineHelpText>
        <label>Make a sandwich</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KF_Separate_kitchen_dining__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Kitchen Facilities</inlineHelpText>
        <label>Separate kitchen &amp; dining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBE_Total_Cost_of_Project__c</fullName>
        <label>LBE Total Cost of Project</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (Legacy contract)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>